bk_ida/gccida/g1/gen_block_die
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_block_die/src/dwarf2out.c:11717:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_block_die/src/dwarf2out.c:11720:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_block_die/src/dwarf2out.c:11726:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_block_die/src/dwarf2out.c:11727:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_block_die/src/dwarf2out.c:11753:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_block_die/src/dwarf2out.c:11788:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_block_die/src/dwarf2out.c:11856:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 9459, "add_abstract_origin_attribute"); 
                             ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_block_die/src/obj/dwarf2out.o] Error 1
